# masm

./: .clang-format  .clang-tidy  .clangd  .containerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  cpp-test.yaml
cmake/: Package.cmake
examples/: arithmetic.asm  fast_invsqrt.asm  float.asm  hello_world.asm  interrupts.asm  merge_sort.asm
include/: consoleio.h  directive.h  exceptions.h  fileio.h  heap.h  instruction.h  interpreter.h  labels.h  memory.h  parser.h  postprocessor.h  pybind_buffer.h  pybind_convert.h  register.h  runtime.h  syscall.h  syscalls.h  tokenizer.h  utils.h
include/debug/: debug_info.h  debug_interpreter.h  intermediates.h
include/interpreter/: cp0.h  cp1.h  cpu.h  heap.h  interpreter.h  memory.h  register.h  state.h  syscalls.h
include/io/: consoleio.h  fileio.h  streamio.h
include/parser/: directive.h  instruction.h  labels.h  parser.h
include/pybind/: pybind_buffer.h  pybind_convert.h
include/tokenizer/: postprocessor.h  tokenizer.h
libmasm/: CMakeLists.txt
libmasm/include/masm/: exceptions.hpp  runtime.h  utils.h
libmasm/include/masm/assembler/: debug_info.hpp  labels.h  labels.hpp  memory.h  memory.hpp  parser.h  parser.hpp  serialization.h  serialization.hpp  tokenizer.h
libmasm/include/masm/interpreter/: cp0.h  cp0.hpp  cp1.h  cp1.hpp  cpu.h  heap.h  interpreter.h  interpreter.hpp  memory.h  state.h  state.hpp  syscalls.h  syscalls.hpp
libmasm/include/masm/io/: consoleio.h  consoleio.hpp  streamio.h  streamio.hpp
libmasm/include/masm/parser/: directive.h  instruction.h
libmasm/include/masm/simulator/: cp0.hpp  cp1.hpp  cpu.hpp  heap.hpp  simulator.hpp  state.hpp  syscalls.hpp
libmasm/src/: conversion.cpp  conversion.h  runtime.cpp  utils.cpp
libmasm/src/assembler/: CMakeLists.txt  directive.cpp  directive.h  directive.hpp  instruction.cpp  instruction.h  instruction.hpp  labels.cpp  memory.cpp  parser.cpp  postprocessor.cpp  postprocessor.h  postprocessor.hpp  serialization.cpp  tokenizer.cpp
libmasm/src/interpreter/: CMakeLists.txt  cp0.cpp  cp1.cpp  cpu.cpp  heap.cpp  interpreter.cpp  memory.cpp  state.cpp  syscalls.cpp
libmasm/src/io/: CMakeLists.txt  consoleio.cpp  fileio.cpp  streamio.cpp
libmasm/src/parser/: CMakeLists.txt  directive.cpp  instruction.cpp  labels.cpp  parser.cpp
libmasm/src/simulator/: CMakeLists.txt  cp0.cpp  cp1.cpp  cpu.cpp  heap.cpp  simulator.cpp  state.cpp  syscalls.cpp
libmasm/src/tokenizer/: CMakeLists.txt  tokenizer.cpp
libmasm/src/util/: CMakeLists.txt  conversion.cpp
masm/: CMakeLists.txt  masm.cpp
mdb/: CMakeLists.txt  debug_info.h  debug_interpreter.cpp  debug_interpreter.h  debug_interpreter.hpp  debug_simulator.cpp  debug_simulator.hpp  intermediates.cpp  mdb.cpp
msim/: CMakeLists.txt  msim.cpp
packaging/: Containerfile.fedora  Containerfile.ubuntu  Containerfile.windows  package.sh
pymasm/: __init__.py  __init__.pyi  exceptions.pyi  interpreter.py  interpreter.pyi  parser.py  parser.pyi  tokenizer.py  tokenizer.pyi
python/: .gitignore  CMakeLists.txt  _version.py  _version.py.in  pyproject.toml
python/examples/: README.md  hello_world.py  mmio.asm  mmio.py  syscall.asm  syscall.py
python/pymasm/: __init__.py
python/pymasm/pymasm_core/: parser.pyi  simulator.pyi  tokenizer.pyi
python/src/: pybind_buffer.hpp  pybind_convert.hpp  python_bindings.cpp
python/tests/: test_bindings.py
scripts/: gen-fixtures.sh
shared/: fileio.h  load_layout.h  load_layout.hpp
src/: consoleio.cpp  directive.cpp  fileio.cpp  heap.cpp  instruction.cpp  interpreter.cpp  labels.cpp  main.cpp  masm.cpp  mdb.cpp  memory.cpp  parser.cpp  postprocessor.cpp  python_bindings.cpp  register.cpp  runtime.cpp  syscall.cpp  syscalls.cpp  tokenizer.cpp  tokenizer.h  utils.cpp
src/debug/: debug_interpreter.cpp  intermediates.cpp
src/interpreter/: cp0.cpp  cp1.cpp  cpu.cpp  heap.cpp  interpreter.cpp  memory.cpp  register.cpp  state.cpp  syscalls.cpp
src/io/: consoleio.cpp  fileio.cpp  streamio.cpp
src/parser/: directive.cpp  instruction.cpp  labels.cpp  parser.cpp
src/pybind/: python_bindings.cpp
test/: fixture_gen.cpp  test_arithmetic_instructions.cpp  test_bindings.py  test_comparison_instructions.cpp  test_comparrison_instructions.cpp  test_control_instructions.cpp  test_instructions.cpp  test_interpreter.cpp  test_memory_instructions.cpp  test_parser.cpp  test_pseudo_instructions.cpp  test_syscall.cpp  test_tokenizer.cpp  test_utils.cpp  testing_utilities.cpp  testing_utilities.h
tests/: CMakeLists.txt  testing_utilities.cpp  testing_utilities.h  testing_utilities.hpp
tests/components/: test_intermediates.cpp  test_interpreter.cpp  test_parser.cpp  test_postprocessor.cpp  test_simulator.cpp  test_syscall.cpp  test_tokenizer.cpp
tests/fixtures/arithmetic/: arithmetic.asm  arithmetic.i  arithmetic.pse  arithmetic.tkn
tests/fixtures/echointer/: echointer.i  echointer.txt
tests/fixtures/falloff/: falloff.asm  falloff.i  falloff.pse  falloff.tkn  falloff.txt
tests/fixtures/globals/: globalsOne.asm  globalsOne.i  globalsOne.pse  globalsOne.txt  globalsTwo.asm
tests/fixtures/hello_world/: hello_world.asm  hello_world.pse  hello_world.tkn
tests/fixtures/input_output/: input_output.asm  input_output.i  input_output.txt
tests/fixtures/load_address/: load_address.i  load_address.pse  load_address.tkn
tests/fixtures/loops/: loops.i  loops.pse  loops.tkn  loops.txt
tests/fixtures/mmio/: mmio.asm  mmio.i  mmio.tkn  mmio.txt
tests/fixtures/mmio_le/: mmio_le.i  mmio_le.pse
tests/fixtures/syscall/: syscall.i  syscall.tkn  syscall.txt
tests/instructions/: test_aliased_instructions.cpp  test_arithmetic_instructions.cpp  test_comparison_instructions.cpp  test_control_instructions.cpp  test_cp0_instructions.cpp  test_cp1_instructions.cpp  test_memory_instructions.cpp  test_pseudo_instructions.cpp
tests/utils/: test_conversion.cpp  test_fileio.cpp  test_utils.cpp
tools/: CMakeLists.txt
(+56 files in other folders)
