[build-system]
requires = ["scikit-build-core", "pybind11>=2.6.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pymasm"
dynamic = ["version"]
description = "MIPS Assembly Simulator Library"
authors = [{ name = "Matthew Pisano", email = "matthewpisano14@gmail.com" }]
license = "BSD-3-Clause"
readme = "../README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = ".."
build.targets = ["pymasm_core"]
install.components = ["python"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../version/version.json"
regex = '"version"\s*:\s*"(?P<value>[^"]+)"'

[tool.pybind11.options]
cpp_std = 23

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
